--- a/_config.yaml
+++ b/_config.yaml
@@ -2,7 +2,7 @@
 
 # site properties and page defaults
 title: SARS-CoV-2 Genetic Interactions in Yeast
-description: A website for my ongoing research on SARS-CoV-2 genetic interactions in yeast in Rodney Rothstein's Lab at Columbia University.
+description: A website on my ongoing research on SARS-CoV-2 genetic interactions in yeast in Rodney Rothstein's Lab at Columbia University.
 logo: images/covid.gif
 header: images/background.jpg
 footer: images/background.jpg
