--- a/_data/citations.yaml
+++ b/_data/citations.yaml
@@ -1,7 +1,7 @@
 # GENERATED AUTOMATICALLY, DO NOT EDIT
 
 - id: doi:10.1016/j.csbj.2020.05.017
-  title: Constructing knowledge graphs and their biomedical applications
+  title: TEST EDIT Constructing knowledge graphs and their biomedical applications
   authors:
   - David N. Nicholson
   - Casey S. Greene
