--- a/_data/SPA_screens.yaml
+++ b/_data/SPA_screens.yaml
@@ -1,13 +1,118 @@
 SPA:
-- query: Nsp10
-  type: SDL
+- query: Nsp10 with Nsp14 WT
+  SDL:
+    - aep2
+    - agx1
+    - aim26
+    - atp1
+    - atp17
+    - atp22
+    - atp7
+    - bts1
+    - cbf1
+    - cem1
+    - coq1
+    - coq4
+    - cor1
+    - cox20
+    - cox23
+    - ctf18
+    - ctf19
+    - ctf3
+    - ctf8
+    - cyt1
+    - fzo1
+    - gal1
+    - ggc1
+    - grx5
+    - hap3
+    - hhf1
+    - hhf2
+    - iml3
+    - irc15
+    - isa1
+    - kar3
+    - kgd1
+    - mcm16
+    - mcm21
+    - mcm22
+    - mdl2
+    - mfm1
+    - mgm1
+    - mrp17
+    - mrpl31
+    - mrpl33
+    - mrpl37
+    - mrps12
+    - mrps17
+    - mrps8
+    - msm1
+    - mss2
+    - nkp2
+    - oxa1
+    - pth2
+    - ref2
+    - reg1
+    - rmd9
+    - rmr1
+    - rpl19b
+    - rrp6
+    - rsa1
+    - rsm24
+    - sls1
+    - sqs1
+    - tps1
+    - ybl100c
+    - ydl068w
+    - ydr109c
+    - yel014c
+    - ykl169c
+    - ynk1
+    - ypl150w 
+    - yta12
+  SUP:
+    - arc18
+    - arp1
+    - cam1
+    - cdc73
+    - cin8
+    - cog1
+    - cue1
+    - eap1
+    - hap4
+    - hnt3
+    - hos2
+    - ies6
+    - kap123
+    - ktr2
+    - ldb16
+    - lea1
+    - mft1
+    - msc7
+    - muk1
+    - opi11
+    - pre9
+    - rpl1b
+    - rpl21a
+    - rsc1
+    - sgf29
+    - snf5
+    - vps25
+    - ygl214w
+    - ynr025c
+- query: Nsp14
   SDL:
     - ERG6
     - SML1
     - ABD1
-- query: Nsp10
-  type: suppressor
   SUP:
     - DIF1
     - RAD52
-  
+- query: Nsp18
+  SDL:
+    - ERG6
+    - SML1
+    - ABD1
+  SUP:
+    - DIF1
+    - RAD52
